buildscript {
	ext {
		springBootVersion = '1.5.2.RELEASE'
	}
	repositories {
		mavenCentral()
		maven { url "https://repo.spring.io/snapshot" }
		maven { url "https://repo.spring.io/milestone" }
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'

version = '0.0.1-SNAPSHOT'
sourceCompatibility = 1.8

repositories {
	mavenCentral()
	maven { url "https://repo.spring.io/snapshot" }
	maven { url "https://repo.spring.io/milestone" }
	maven{ url "https://mvnrepository.com/artifact/commons-codec/commons-codec"}
}


dependencies {
	testCompile('org.springframework.boot:spring-boot-starter-test')
	compile "com.marksandspencer:mands-springboot-hystrix:1.0.0"
	compile("org.springframework.boot:spring-boot-starter-mustache")
	testCompile("org.springframework.boot:spring-boot-starter-test")
	compile group: 'pl.allegro.tech.boot', name: 'handlebars-spring-boot-starter', version: '0.2.15'
	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.5.2.RELEASE'
	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
	compile("org.springframework.boot:spring-boot-starter-integration")
	compile("org.springframework.boot:spring-boot-starter-data-rest")
	compile("org.springframework.boot:spring-boot-starter-data-mongodb")
    compile("org.springframework.boot:spring-boot-starter-web")
    compile group: 'javax.ws.rs', name: 'jsr311-api', version: '1.1.1'
	compile group: 'commons-codec', name: 'commons-codec', version: '1.5'
    
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Dalston.BUILD-SNAPSHOT"
	}
}
